[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "openai>=2.15.0",
    "pyaudio>=0.2.14",
    "requests>=2.32.5",
    "speechrecognition>=3.14.5",
    "spotipy>=2.25.2",
]
